--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -14,6 +14,33 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+
+    margin-top: calc(0px - 1.5rem - 6px);
+}
+
+.profile strong {
+    margin-top: 1rem;
+    color: var(--gray--100);
+    line-height: 1.6;
+}
+
+.profile span{
+    font-size: 0.875rem;
+    color: var(--gray--400);
+    line-height: 1.6;
+    font-weight: 100;
+}
+
+.profile img{
+    box-sizing: initial;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 8px;
+    margin: auto;
+
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500)
+    
 }
 
 footer {
@@ -24,10 +51,21 @@ footer {
 }
 
 footer a{
+    display: flex;
     background: transparent;
     color: var(--green-500);
     border: 1px solid var(--green-500);
     border-radius: 8px;
     padding: 1rem 1.5rem;
     text-decoration: none;
+    font-weight: 700;
+
+    gap: 0.5rem;
+
+    transition: background 0.3s, color 0.3s;
+}
+
+footer a:hover{
+    background: var(--green-500);
+    color: var(--gray-800);
 }
