--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -26,9 +26,9 @@
 
 .profile span{
     font-size: 0.875rem;
-    color: var(--gray--400);
+    color: var(--gray-400);
     line-height: 1.6;
-    font-weight: 100;
+    font-weight: 400;
 }
 
 .profile img{
