--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,8 +1,26 @@
 .post{
-    width: 52rem;
+    
     background: var(--gray-800);
     padding: 2.8125rem;
+    border-radius: 8px;
 }
+
+.post + .post {
+    margin-top: 2rem;
+}
+
+.post > header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post > header time {
+    font-size: 0.875rem;
+    color: var(--gray-400);
+
+}
+
 
 .author{
     display: flex;
@@ -26,6 +44,10 @@
     font-size: 14px;
 }
 
+time{
+    text-align: right;
+    justify-content: right;
+}
 
 .avatar {
     box-sizing: initial;
@@ -37,4 +59,35 @@
     border-radius: 8px;
     border: 4px solid var(--gray-800);
     outline: 2px solid var(--green-500);
+}
+
+
+.content {
+    line-height: 1.6;
+    color: var(--gray-300);
+    margin-top: 1.5rem;
+}
+
+.content a{
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--green-500);
+    transition: text-decoration 0.2s;
+}
+
+.content a:hover{
+    text-decoration: underline;
+
+}
+
+.post footer .commentForm{
+    width: 100%;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border: 1px solid var(--gray-600);
+}
+
+.post footer .commentForm > strong {
+    line-height: 1.6;
+    color: var(--gray-100);
 }
