--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -31,26 +31,15 @@
     font-weight: 400;
 }
 
-.profile img{
-    box-sizing: initial;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 8px;
-    margin: auto;
 
-    border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green-500)
-    
-}
-
-footer {
+aside footer {
     border-top: 1px solid var(--gray-600);
     margin-top: 1.5rem;
     padding: 1.5rem 2rem 2rem 2rem;
     text-align: center;
 }
 
-footer a{
+aside footer a{
     display: flex;
     background: transparent;
     color: var(--green-500);
