Fixing some bugs in mobile mode

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -58,7 +58,7 @@ article > header > time{
     margin-top: 1.5rem;
 }
 
-.content pre{
+.content p{
     font-family: "roboto";
     font-size: 1rem;
     line-height: 1.6;
