--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,10 +3,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1.25rem 0;
+    padding: 1.25rem;
     font-size: 1.1rem;
     gap: 1rem;
-    width: 100vw;
 }
 
 .header img{
