--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,22 @@
     --red-500: #F75A68;
 }
 
+.light{
+    --gray-100: #121214;
+    --gray-300: #202024;
+    --gray-400: #29292e;
+    --gray-600: #323238;
+    --gray-700: #8d8d99;
+    --gray-800: #c4c4cc;
+    --gray-900: #e1e1e6;    /*Usado no background*/
+
+    --green-300: #00B37E;
+    --green-500: #00875f;
+
+    --red-500: #F75A68;
+
+}
+
 :focus{
     outline: transparent;
     box-shadow: 0 0 0 1px var(--green-500);
