Finished Comments parts

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -126,8 +126,13 @@ article > header > time{
     transition: background 0.25s;
 }
 
-.commentForm button[type="submit"]:hover {
+.commentForm button[type="submit"]:not(:disabled):hover {
     background: var(--green-300);
+}
+
+.commentForm button[type="submit"]:disabled{
+    opacity: 0.6;
+    cursor: not-allowed;
 }
 
 
