Fixing bugs on comment area

--- a/src/global.css
+++ b/src/global.css
@@ -27,8 +27,8 @@
     --gray-400: #29292e;
     --gray-600: #323238;
     --gray-700: #00ffff;
-    --gray-800: #89cff0;
-    --gray-900: #D4F0F7;    /*Usado no background*/
+    --gray-800: #8ab3cf;
+    --gray-900: #bdd1de;    /*Usado no background*/
 
     --green-300: #00B37E;
     --green-500: #00875f;
